<resources>
    <string name="app_name">XInsta</string>

    <!-- Alert Dialog -->
    <string name="Okay">Okay</string>
    <string name="Warning">You can access the app via the Xposed Installer once it has been hidden.</string>

    <!-- Date -->
    <string name="AM">AM/PM</string>
    <string name="Day">Day</string>
    <string name="Hour">Hour</string>
    <string name="Minute">Minute</string>
    <string name="Month">Month</string>
    <string name="Reset">Reset</string>
    <string name="Second">Second</string>
    <string name="Space">---SPACE---</string>
    <string name="Year">Year</string>

    <!-- File Browser -->
    <string name="nnf_new_folder">New folder</string>
    <string name="nnf_create_folder_error">Failed to create folder</string>
    <string name="nnf_name">Name</string>
    <string name="nnf_select_something_first">Please select something first</string>
    <string name="nnf_permission_external_write_denied">Permission to access filesystem denied</string>

    <!-- ListView -->
    <string name="Image">Image Location</string>
    <string name="Profile">Profile Icon Location</string>
    <string name="Recommended">Recommended</string>
    <string name="Save">SAVE LOCATIONS</string>
    <string name="Update">UPDATE HOOKS</string>
    <string name="Video">Video Location</string>

    <!-- Menu Items !-->
    <string name="Automatically">Automatic Update Checker</string>
    <string name="Change">Change Separator</string>
    <string name="ChangeApp">Change XInsta App Icon</string>
    <string name="ChangeOrder">Change Options Order</string>
    <string name="Check">Check For Update</string>
    <string name="Comment">Copy Comment On Tap</string>
    <string name="Contact">Contact Developer</string>
    <string name="Custom">Custom Language</string>
    <string name="Customization">Customization</string>
    <string name="Date">Date Formatting</string>
    <string name="Default">Default Hook Source</string>
    <string name="Discovery">Disable Discovery</string>
    <string name="Error_log">Send Error Logs</string>
    <string name="Experimental">Experimental Hooks Finder</string>
    <string name="File">File - Change Date Format</string>
    <string name="FileFormat">File - Change File Format</string>
    <string name="FileURL">File - URL Format As Filename</string>
    <string name="FileUsername">File - Full Username</string>
    <string name="Folder">Folder - Add Username</string>
    <string name="Follow">Follow Indicator - Color</string>
    <string name="Hide">Hide App</string>
    <string name="HidePost">Hide Paid Partnership Post</string>
    <string name="Like">Disable Like Button</string>
    <string name="Liked">Disable Liked Post</string>
    <string name="Logging">Disable Xposed Logging</string>
    <string name="Manual">Manually Change Hooks</string>
    <string name="Misc">Misc.</string>
    <string name="NotificationHide">Hide Download Notification</string>
    <string name="Pass">Pass Downloads To XInsta</string>
    <string name="Pin">Pin/Save - Download</string>
    <string name="Push">Push Notification - Download</string>
    <string name="Resolution">Force High Resolution</string>
    <string name="Search">Disable Search History</string>
    <string name="SaveHooks">Save Hooks To File</string>
    <string name="Show">Show App</string>
    <string name="Slide">Disable Slide Navigation</string>
    <string name="Sound">Enable Sound Auto-Play (Videos)</string>
    <string name="Special">Special Thanks</string>
    <string name="Story">Disable Stories Timer</string>
    <string name="StoryHide">Hide Stories</string>
    <string name="StoryPrivacy">Stories Privacy</string>
    <string name="Suggestion">Hide Suggestions</string>
    <string name="Translations">Translate XInsta</string>
    <string name="VideoLikes">Video Likes Count</string>

    <!-- Menu Items Description -->
    <string name="Automatically_Summary">Checks for XInsta updates when Instagram is opened.</string>
    <string name="Change_Summary">Change File Separator</string>
    <string name="ChangeApp_Summary">Change XInsta App Icon To Newer Icon</string>
    <string name="ChangeOrder_Summary">Change Instagram\'s Options Order When Clicking Three Dot Icon</string>
    <string name="Check_Summary">Manually Check For XInsta Update</string>
    <string name="Comment_Summary">Tap Comments To Copy</string>
    <string name="Custom_Summary">Use A Language Not Supported By Android</string>
    <string name="Date_Summary">Set Date Format For Exact Posted Time Of Post (Instead of X Minutes Ago)</string>
    <string name="Default_Summary">Choose Default Hook Source Used By XInsta</string>
    <string name="Discovery_Summary">Disable Discovery Section (Search Icon)</string>
    <string name="Experimental_Summary">An experimental solution that finds hooks.</string>
    <string name="File_Summary">Choose Date Format For Files (Month/Day/Year)</string>
    <string name="FileFormat_Summary">Change File Parameters Format (Username_MediaID_UserID)</string>
    <string name="FileURL_Summary">Use Filename From Instagram Post URL as Filename</string>
    <string name="FileUsername_Summary">Use Users Full Instagram Name (National Geographic vs Natgeo)</string>
    <string name="Folder_Summary">Save Into Folder With Username Of Poster</string>
    <string name="Follow_Summary">Change The Follow Indicator Color</string>
    <string name="Hide_Summary">Hide XInsta From Your Drawer</string>
    <string name="HidePost_Summary">Hide Post That Have Paid Sponsorships</string>
    <string name="Like_Summary">Disable Double Tap To Like For Post</string>
    <string name="Liked_Summary">Hides Liked Post Section In Instagram</string>
    <string name="Logging_Summary">Disable Xposed Logging</string>
    <string name="Manual_Summary">Manually Change Hooks</string>
    <string name="NotificationHide_Summary">Hide Download Notification For Completed Download</string>
    <string name="Pin_Summary">Use The Pin/Save Button To Download Post</string>
    <string name="Push_Summary">Automatically Download Push Notifications</string>
    <string name="Resolution_Summary">Force High Resolution Images/Video For Devices That Have Low Resolution Screens. This May Cause Issues On Certain Devices</string>
    <string name="Search_Summary">Disable Explore Tab Search History</string>
    <string name="SaveHooks_Summary">XInsta Will Automatically Load Hooks Without Fetching Them.</string>
    <string name="Show_Summary">Show XInsta In Your Drawer</string>
    <string name="Slide_Summary">Disable Swiping Left to Right or Right To Left To Change Views In Instagram</string>
    <string name="Story_Summary">Prevent Stories From Closing Automatically</string>
    <string name="StoryHide_Summary">Hide Stories Tray On Main and Explore Tab</string>
    <string name="StoryPrivacy_Summary">Prevent Users From Seeing You Viewing Their Story</string>
    <string name="Suggestion_Summary">Hide Suggestions By Instagram. This Feature May Cause Issues and Crashing On Certain Devices.</string>
    <string name="VideoLikes_Summary">Adds Video Likes To Post</string>

    <string name="the_not_so_big_but_big_button2_summary">Allows You To Open A Post In A Private Window</string>

    <!-- Module -->
    <string name="Download_Completed">Download Completed</string>
    <string name="Download_Failed">Download Failed</string>
    <string name="DownloadDots">Downloading&#8230;</string>
    <string name="Please">Please update your hooks via the module.</string>

    <!-- Parameters for above (Downloading photo/video) -->
    <string name="photo">Photo</string>
    <string name="video">Video</string>

    <!-- The Download button -->
    <string name="the_not_so_big_but_big_button">Download</string>
    <string name="the_not_so_big_but_big_button2">Privacy Lock</string>
    <string name="the_not_so_big_but_big_button3">Unlock Feed</string>

    <!-- Title in notification -->
    <string name="username_thing">%1$s\'s %2$s</string>

    <!-- Toast Messages -->
    <string name="Copied">Comment Copied</string>
    <string name="Downloading">Downloading %1$s</string>
    <string name="Hooks_Latest">You already have the latest hooks.</string>
    <string name="Hooks_Updated">Hooks have been updated.\nPlease kill the Instagram app.</string>
    <string name="I_LocationChanged">Image save location reset to default.</string>
    <string name="Incorrect_Location">Unable to save here.\nPlease select another location.</string>
    <string name="P_LocationChanged">Profile icon save location reset to default.</string>
    <string name="Picture_Not">Please click the image and try again</string>
    <string name="V_LocationChanged">Video save location reset to default.</string>
</resources>