<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General">
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/ChangeOrder_Summary"
            android:title="@string/ChangeOrder"/>
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/Custom"
            android:title="@string/Custom"
            android:entries="@array/custom_languages_entries"
            android:entryValues="@array/custom_languages_values"
            android:summary="@string/Custom_Summary"/>
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="Direct Message - Download"
            android:title="Direct Message - Download"/>
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/Discovery_Summary"
            android:title="@string/Discovery"/>
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/Slide_Summary"
            android:title="@string/Slide"/>
        <Preference
            android:key="@string/Follow"
            android:summary="@string/Follow_Summary"
            android:title="@string/Follow"/>
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/Resolution_Summary"
            android:title="@string/Resolution"/>
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/NotificationHide_Summary"
            android:title="@string/NotificationHide"/>
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/Suggestion_Summary"
            android:title="@string/Suggestion"/>
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/Push_Summary"
            android:title="@string/Push"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="Feed">
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/Comment_Summary"
            android:title="@string/Comment"/>
        <Preference
            android:key="@string/Date"
            android:summary="@string/Date_Summary"
            android:title="@string/Date"/>
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/Like_Summary"
            android:title="@string/Like"/>
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/Liked_Summary"
            android:title="@string/Liked"/>
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/HidePost_Summary"
            android:title="@string/HidePost"/>
        <ListPreference
            android:defaultValue="0"
            android:key="Pin"
            android:dialogTitle="@string/Pin"
            android:entries="@array/pin_entries"
            android:entryValues="@array/pin_values"
            android:summary="@string/Pin_Summary"
            android:title="@string/Pin"/>
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/VideoLikes_Summary"
            android:title="@string/VideoLikes"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="File">
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/File"
            android:entries="@array/file_date_entries"
            android:entryValues="@array/file_date_values"
            android:summary="@string/File_Summary"
            android:title="@string/File"/>
        <Preference
            android:key="@string/FileFormat"
            android:summary="@string/FileFormat_Summary"
            android:title="@string/FileFormat"/>
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/FileUsername_Summary"
            android:title="@string/FileUsername"/>
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/FileURL_Summary"
            android:title="@string/FileURL"/>
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/Folder_Summary"
            android:title="@string/Folder"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="Privacy">
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/Search_Summary"
            android:title="@string/Search"/>
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/the_not_so_big_but_big_button2_summary"
            android:title="@string/the_not_so_big_but_big_button2"/>
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/StoryPrivacy_Summary"
            android:title="@string/StoryPrivacy"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="Stories">
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/Story_Summary"
            android:title="@string/Story"/>
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/StoryHide_Summary"
            android:title="@string/StoryHide"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/app_name">
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/Automatically_Summary"
            android:title="@string/Automatically"/>
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/ChangeApp_Summary"
            android:title="@string/ChangeApp"/>
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/Default"
            android:entries="@array/default_entries"
            android:entryValues="@array/default_values"
            android:summary="@string/Default_Summary"
            android:title="@string/Default"/>
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/Logging_Summary"
            android:title="@string/Logging"/>
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="Download Options"
            android:entries="@array/download_option_entries"
            android:entryValues="@array/download_option_values"
            android:summary="Choose How Downloads Are Downloaded"
            android:title="Download Options"/>
        <com.ihelp101.instagram.Pref
        android:defaultValue="false"
        android:summary="@string/Experimental_Summary"
        android:title="@string/Experimental"/>
        <com.ihelp101.instagram.Pref
            android:defaultValue="false"
            android:summary="@string/Hide_Summary"
            android:title="@string/Hide"/>
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/Manual"
            android:entries="@array/manual_entries"
            android:entryValues="@array/manual_values"
            android:summary="@string/Manual_Summary"
            android:title="@string/Manual"/>
    </PreferenceCategory>
</PreferenceScreen>