<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/Contact">
    <menu>
        <group android:checkableBehavior="single">
            <item android:id="@+id/error_log"
                android:icon="@drawable/ic_error_black_24dp"
                android:title="@string/Error_log"
                android:checkable="false"/>
            <item android:id="@+id/translate"
                android:icon="@drawable/ic_g_translate_black_24dp"
                android:title="@string/Translations"
                android:checkable="false"/>
        </group>
    </menu>
    </item>
    <item android:title="@string/Misc">
        <menu>
            <group android:checkableBehavior="single">
                <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="Settings" />
                <item
                    android:icon="@drawable/ic_favorite_black_24dp"
                    android:title="@string/Special"/>
            </group>
        </menu>
    </item>
</menu>